--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <h3 id="time" class="time">Time: 00:00</h3>
       <h3 id="score" class="score">Score: 0</h3>
       <h5 id="message" class="message">
-        Are you annnoyed yet? <br>
-        You are playing an impossible game!!
+        amar taka ta diye dis <br>
+        
       </h5>
     </div>
 
